# Push_Swap

./: .gitignore  CMakeLists.txt  Makefile  README.md
includes/: push_swap.h
libft/: Makefile
libft/src/additional/src/: ft_to_bin.c
libft/src/lists/src/: ft_lstnew.c
libft/src/memory/src/: ft_malloc_s.c
libft/src/string/src/: ft_atoi.c  ft_strchr.c  ft_strnew.c  ft_strsplit.c  ft_strtrim.c
src/: checker.c  initializations.c  operations.c  push_swap.c  validation.c
